Another two interfaces for loading rules.
